# cli

./: README.md  pyproject.toml
schift_cli/: client.py  config.py  display.py  main.py
schift_cli/commands/: auth.py  bench.py  catalog.py  db.py  embed.py  jobs.py  migrate.py  query.py  search.py  skill.py  upload.py  usage.py
schift_cli/data/schift-best-practices/: AGENTS.md  SKILL.md
schift_cli/data/schift-best-practices/references/: bucket-organization.md  bucket-upload.md  chatbot-widget.md  cost-batching.md  cost-storage-tiers.md  deploy-cloudrun.md  embed-batch-processing.md  embed-error-handling.md  embed-multimodal.md  embed-task-types.md  rag-chunking.md  rag-workflow-builder.md  sdk-async-patterns.md  sdk-auth-patterns.md  search-collection-design.md  search-hybrid.md  search-similarity-tuning.md
tests/: test_migrate.py  test_p0a_cli_regressions.py  test_query.py
