[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schift-cli"
version = "0.1.0"
description = "Schift CLI — manage agents, embeddings, and vector buckets"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
schift = "schift_cli.main:cli"

[tool.setuptools.packages.find]
include = ["schift_cli*"]

[tool.setuptools.package-data]
schift_cli = ["data/schift-best-practices/**/*.md"]
